syntax = "proto3";

package balance;

service BalanceService {
    rpc SendBalance (SendBalanceRequest) returns (SendBalanceResponse);
    rpc CreateBalanceAccount (CreateBalanceAccountRequest) returns (CreateBalanceAccountResponse);
}

message SendBalanceRequest {
    int32 sender_acc = 1;
    int32 receiver_acc = 2;
    float amount = 3;
}

message SendBalanceResponse {
    bool success = 1;
    string message = 2;
}


message CreateBalanceAccountRequest{
    string user_id = 1;
    double amount = 2;
    string account_type = 3;
}

message CreateBalanceAccountResponse{
    int32 account_number = 1;
    double amount = 2;
    string account_type = 3;
}